# hmwrk-3-02_02_20

./: .gitattributes  .gitignore  CMakeLists.txt  PreLoad.cmake  _ip_filter.tsv
app/: CMakeLists.txt  app.cpp
conf/: git_create_repo.txt.in
conf/version/: cmake_values.h.in
include/version/: version.h
lib/version/: CMakeLists.txt  version.cpp
tests/boost/: CMakeLists.txt  test_version.cpp
